# ghost-fabric

./: .gitignore  ASSUMED_BREACH_THREAT_MODEL.md  BACKLOG.md  Cargo.toml  PROOF_OF_ARTIFACTS.md  README.md  TIMELINE_OF_INVENTION.md  USER_STORY_ANALYSIS.md  WHITEPAPER.md
android/: Cargo.toml  settings.gradle
android/app/: build.gradle  upload-keystore.jks
android/app/src/main/: AndroidManifest.xml
android/src/: lib.rs
docs/: compression_map.md
govdocs/: ACCESSIBILITY.md  CMMC.md  FEDERAL_USE_CASES.md  FIPS.md  FedRAMP_NOTES.md  ITAR_EAR.md  PRIVACY.md  SBOM.md  SECURITY.md  SSDF.md  SUPPLY_CHAIN.md  SUPPLY_CHAIN_AUDIT.md
src/: config.rs  inference.rs  lib.rs  lifecycle.rs  main.rs  mesh.rs  packet.rs  radio.rs  sensor.rs  uds_radio.rs
tests/: integration.rs
