[workspace]
members = [".", "android"]
resolver = "3"

[package]
name = "ghost-fabric"
version = "0.1.0"
edition = "2024"

[lib]
name = "ghost_fabric_core"
path = "src/lib.rs"

[[bin]]
name = "ghost-fabric"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
libc = "0.2"
ciborium = "0.2"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
