[workspace]
members = [".", "android"]
resolver = "3"

[package]
name = "ghost-fabric"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
[lib]
name = "ghost_fabric_core"
path = "src/lib.rs"

[[bin]]
name = "ghost-fabric"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
libc = "0.2"
ciborium = "0.2"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

# ─── P27 SPEED-DIAMOND ──────────────────────────────────────────────
# For local dev / benchmarking. Runtime hot paths dominate.
# Canonical source: https://cochranblock.org/diamond-profile.toml
[profile.diamond]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug = false
incremental = false
split-debuginfo = "off"

# ─── P27 SIZE-DIAMOND (edge) ────────────────────────────────────────
# Primary profile for ghost-fabric: LoRa mesh node, 915 MHz constrained.
# Every byte crosses a bandwidth-constrained link.
[profile.diamond-edge]
inherits = "release"
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug = false
incremental = false
split-debuginfo = "off"
