[package]
name = "ghost-fabric-android"
version = "0.1.0"
edition = "2024"

[lib]
name = "ghost_fabric_android"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
ghost-fabric = { path = "..", default-features = false }
log = "0.4"
android_logger = "0.14"
android-activity = { version = "0.6", features = ["native-activity"] }
eframe = { version = "0.31", default-features = false, features = ["android-native-activity", "glow"] }
egui = "0.31"

[package.metadata.android]
package = "org.cochranblock.ghostfabric"
label = "Ghost Fabric"
target_sdk_version = 35
min_sdk_version = 28
